# Modules/Projects/app/Transformers/ListResource.php
@@ -1,0 +1,28 @@
+<?php
+
+
+namespace Modules\Projects\Transformers;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class ListResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param \Illuminate\Http\Request $request
+     * @return array
+     */
+    public function toArray($request)
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'projects_id' => $this->projects_id,
+            'projects_teams_id' => $this->projects_teams_id,
+            'views_id' => $this->views_id,
+            'created_at' => $this->created_at,
+            'updated_at' => $this->updated_at,
+        ];
+    }
+}
